Handle return value from system() properly. PR 45672 from River Tarnell.